<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/read"
        android:title="@string/menu_read_0002" />
    <item
        android:id="@+id/write"
        android:title="@string/menu_write_0002" />
    <item
        android:id="@+id/write_notification"
        android:title="@string/menu_write_notification" />
    <item
        android:id="@+id/write_indication"
        android:title="@string/menu_write_indication" />
    <item
        android:id="@+id/write_notification_stop"
        android:title="@string/menu_write_notification_stop" />
    <item
        android:id="@+id/write_indication_stop"
        android:title="@string/menu_write_indication_stop" />
    <item
        android:id="@+id/clear"
        android:title="@string/menu_clear" />
</menu>